--- a/style.css
+++ b/style.css
@@ -5,7 +5,10 @@
 }
 
 body {
-
-font-family: 'Comfortaa', sans-serif;
-background-color: #f0f0f0;
+    font-family: 'Comfortaa', sans-serif;
+    background-color: #f0f0f0;
+    justify-content: center;
+    align-items: center;
 }
+
+
